# actix-shuttle

./: Cargo.toml
assets/: manifest.json
src/: main.rs
