[package]
name = "actix-shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
shuttle-actix-web = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-static-folder = "0.20.0"
tokio = "1.29.1"
